k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: security-api
  labels:
    app: security-api
spec:
  ports:
    - name: https
      port: 8080
      targetPort: 8080
  selector:
    app: security-api
  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: security-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: security-api
  template:
    metadata:
      labels:
        app: security-api
    spec:
      containers:
        - image: franvallano/security-backend:main-0.0.1
          name: security-api
          imagePullPolicy: Always
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              memory: "786Mi"
              cpu: "25m"
            limits:
              memory: "1024Mi"
              cpu: "2"
          ports:
            - name: http
              containerPort: 8080
