k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: security-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - api.security.me
      secretName: auth-tls-secret-security-api
  rules:
    - host: api.security.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: security-api
                port:
                  number: 8080
